# CMakeList.txt: проект CMake для Skillbox_cpp_29_2; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Enable Hot Reload for MSVC compilers if supported.
project ("Skillbox_cpp_29_2")

# Добавьте источник в исполняемый файл этого проекта.



add_subdirectory(src)
# TODO: Добавьте тесты и целевые объекты, если это необходимо.
